...
                              context,
                            ).colorScheme.primary,
                            tabs: <Widget>[
                              Tab(
                                text: videoDetailController.sourceType.isPgc
                                    ? '剧集选集'
                                    : '相关推荐',
                              ),
                              const Tab(text: '评论交流'),
                            ],
                          ),
                        ),
                        Expanded(
                          child: TabBarView(
                            physics: const CustomTabBarViewScrollPhysics(),
...
